<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/gradient"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <TextView
        android:id="@+id/carpool"
        android:layout_width="match_parent"
        android:layout_height="181dp"
        android:gravity="center"
        android:textColor="@color/white"
        android:padding="10dp"
        android:text="@string/carpool"
        android:textSize="30sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/yes_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp">

        <RadioButton
            android:id="@+id/yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/yes"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/no"
            android:textSize="20dp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/ride"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:visibility="invisible"
        >

        <RadioButton
            android:id="@+id/hitchhiker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:textSize="20dp"
            android:text="@string/hitchhiker"
           />

        <RadioButton
            android:id="@+id/driver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:text="@string/driver"
            android:textSize="20dp"
         />
    </RadioGroup>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:id="@+id/howManyPlace"
        android:visibility="invisible"
        android:padding="10dp"
        android:inputType="number"
        android:gravity="center"
        android:background="@drawable/edit_text_shape"
        android:layout_marginTop="20dp"
        />

    <AutoCompleteTextView
        android:id="@+id/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:completionHint="@string/city"
        android:completionThreshold="1"
        android:hint="@string/city"
        android:dropDownHeight="200dp"
        android:gravity="center"
        android:visibility="invisible"
        android:background="@drawable/edit_text_shape"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:textStyle="bold"
        />


    <Button
        android:id="@+id/sendEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/purple_500"
        android:padding="10dp"
        android:text="@string/send1"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:visibility="invisible"/>
</LinearLayout>